--- a/Notebooks/Example.ipynb
+++ b/Notebooks/Example.ipynb
@@ -174,7 +174,7 @@
     "                       student_bert_model=S_BERT,\n",
     "                       teacher_bert_model=T_BERT,\n",
     "                       teacher=ctm_T,\n",
-    "                       use_partitions=False, use_validation=False #for PMIndia\n",
+    "                       use_partitions=False, use_validation=False\n",
     "                       )\n",
     "        \n",
     "    return model"
